# Dialann

./: Cargo.toml
src/: app.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  handle_dates.rs  import_export_handlers.rs  lib.rs  main.rs
src/components/: diary_list_item.rs  mod.rs
src/models/: entry.rs  mod.rs  mood.rs
src/pages/: about_page.rs  main_page.rs  mod.rs  new_entry_page.rs  reports_page.rs  settings_page.rs
